ADD:HTML USERNAMES AND IMAGES

--- a/index.html
+++ b/index.html
@@ -7,47 +7,73 @@
     <title>ZOOM</title>
   </head>
   <body>
+    <!-- videocamera -->
     <main>
       <div class="big-container">
         <div class="col">
-          <span>Pinco Pallo</span>
+          <span class="user-name"
+            ><i class="fa-thin fa-microphone-slash"></i>Pinco Pallo</span
+          >
         </div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
+        <div class="col">
+          <span class="user-name">Pinco pallo</span>
+        </div>
+        <div class="col">
+          <span class="user-name">Pinco Pallo</span>
+        </div>
+        <div class="col">
+          <span class="user-name">Pinco Pallo</span>
+        </div>
+        <div class="col">
+          <span class="user-name">Pinco Pallo</span>
+        </div>
+        <div class="col">
+          <span class="user-name">Pinco Pallo</span>
+        </div>
+        <div class="col">
+          <span class="user-name">Pinco Pallo</span>
+        </div>
+        <div class="col">
+          <span class="user-name">Pinco Pallo</span>
+        </div>
+        <div class="col">
+          <span class="user-name">Pinco Pallo</span>
+        </div>
+        <div class="col">
+          <span class="user-name">Pinco Pallo</span>
+        </div>
+        <div class="col">
+          <span class="user-name">Pinco Pallo</span>
+        </div>
+        <div class="col">
+          <span class="user-name">Pinco Pallo</span>
+        </div>
+        <div class="col"><span class="user-name">Pinco Pallo</span></div>
+        <div class="col"><span class="user-name">Pinco Pallo</span></div>
+        <div class="col"><span class="user-name">Pinco Pallo</span></div>
+        <div class="col"><span class="user-name">Pinco Pallo</span></div>
+        <div class="col"><span class="user-name">Pinco Pallo</span></div>
+        <div class="col"><span class="user-name">Pinco Pallo</span></div>
+        <div class="col"><span class="user-name">Pinco Pallo</span></div>
+        <div class="col"><span class="user-name">Pinco Pallo</span></div>
+        <div class="col"><span class="user-name">Pinco Pallo</span></div>
+        <div class="col"><span class="user-name">Pinco Pallo</span></div>
+        <div class="col"><span class="user-name">Pinco Pallo</span></div>
+        <div class="col"><span class="user-name">Pinco Pallo</span></div>
+        <div class="col"><span class="user-name">Pinco Pallo</span></div>
+        <div class="col"><span class="user-name">Pinco Pallo</span></div>
+        <div class="col"><span class="user-name">Pinco Pallo</span></div>
+        <div class="col"><span class="user-name">Pinco Pallo</span></div>
+        <div class="col"><span class="user-name">Pinco Pallo</span></div>
+        <div class="col"><span class="user-name">Pinco Pallo</span></div>
+        <div class="col"><span class="user-name">Pinco Pallo</span></div>
+        <div class="col"><span class="user-name">Pinco Pallo</span></div>
+        <div class="col"><span class="user-name">Pinco Pallo</span></div>
+        <div class="col"><span class="user-name">Pinco Pallo</span></div>
+        <div class="col"><span class="user-name">Pinco Pallo</span></div>
       </div>
     </main>
+    <!-- Actions list -->
     <footer></footer>
   </body>
 </html>
