ADD: FOOTER HTML

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="CSS/styles.css" />
     <title>ZOOM</title>
+
+    <link
+      href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!-- videocamera -->
@@ -12,7 +17,7 @@
       <div class="big-container">
         <div class="col">
           <span class="user-name"
-            ><i class="fa-thin fa-microphone-slash"></i>Pinco Pallo</span
+            ><i class="fa-solid fa-microphone"></i></i>Pinco Pallo</span
           >
         </div>
         <div class="col">
@@ -74,6 +79,27 @@
       </div>
     </main>
     <!-- Actions list -->
-    <footer></footer>
+    <footer>
+      <div class="items">
+        <span>Mute</span>
+        <span>^</span>
+        <span>Stop Video</span>
+        <span>^</span>
+      </div>
+      <div class="items">
+        <span>Invite</span>
+        <span>Manage Participants</span>
+        <span>Polling</span>
+        <span>Share screen</span>
+        <span>^</span>
+        <span>Chat</span>
+        <span>Record</span>
+        <span>Breakout Rooms</span>
+        <span>More</span>
+      </div>
+      <div class="items">
+        <span class="btn-end"> End meeting</span>
+      </div>
+    </footer>
   </body>
 </html>
